# N-body_problem

./: CMakeLists.txt  README.md  main.cpp  toCart.cpp
Modules/: Body.cpp  Body.h  Compute.cpp  Compute.h  Consts.h  DataOut.cpp  DataOut.h  MatVec.cpp  MatVec.h  PhysicalConsts.h  Problem.cpp  Problem.h  json.hpp
Problems/: SP-45.json  data.json  ecOrbit.json
